# jj-geoip

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
geoip/: csv_report.py  ipinfo.py  load_env.py  main.py
test/: test_ipinfo.py
