[tool.poetry]
name = "geoip"
version = "0.1.0"
description = "GeoIP enrichment"
authors = ["Chapin Bryce"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
responses = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
